<resources>
    <string name="app_name">ZhiHuDaily</string>
    <string name="date_format">EEE, MMM d, yyyy</string>
    <string name="action_settings">设置</string>
    <string name="action_star">收藏</string>
    <string name="night_mode">夜间模式</string>
    <string name="home">主页</string>
    <string name="favourite">收藏夹</string>
    <string name="about">关于</string>
    <string name="down">离线缓存</string>
    <string name="tools">设置</string>
    <string name="name">孙国璋 20152120009</string>
    <string name="intro">Java实验上机大作业</string>
</resources>
