<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@mipmap/icon_local"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_photo"
            android:icon="@mipmap/icon_event"
            android:title="@string/favourite"/>
        <item
            android:id="@+id/nav_down"
            android:icon="@drawable/down"
            android:title="@string/down"/>
    </group>

    <item android:title=" ">
        <menu>
            <item
                android:id="@+id/nav_night_mode"
                android:title="@string/night_mode"
                android:icon="@drawable/dark" />
            <item
                android:id="@+id/nav_about"
                android:icon="@mipmap/icon_people"
                android:title="@string/about"/>

        </menu>
    </item>
</menu>